# heatseeker

./: .env.example  .gitignore  CLAUDE.md  Heatseeker.bat  README.md  alembic.ini  pyproject.toml
applications/api/: pyproject.toml
applications/api/src/heatseeker_api/: __init__.py  api_entities.py  api_graph.py  api_leads.py  api_routes.py  guidance.py  main.py  ui_ai.py  ui_discovery.py  ui_entities.py  ui_leads.py  ui_projects.py  ui_routes.py  ui_sources.py
applications/api/src/heatseeker_api/templates/: _jobs_table.html  backups.html  base.html  dashboard.html  discovery.html  entities.html  entity_detail.html  error.html  evidence.html  evidence_detail.html  health.html  job_detail.html  jobs.html  leads.html  pack_detail.html  packs.html  project_detail.html  projects.html  resolution.html  scopes.html  source_detail.html  source_scout.html  source_scout_run.html  sources.html
applications/cli/: pyproject.toml
applications/cli/src/heatseeker_cli/: __init__.py  main.py
applications/worker/: pyproject.toml
applications/worker/src/heatseeker_worker/: __init__.py  runner.py
applications/worker/src/heatseeker_worker/handlers/: __init__.py  demo.py  discovery.py  documents.py  entities.py  leads.py  profiles.py  source_scout.py  sources.py
docs/: Phase 1 Initial Instructions - niche_industry_intelligence_phase_1_dev_spec.md  README.md  conventions.md  glossary.md  local_market_catalyst_intelligence_dev_spec.md  roadmap.md
docs/architecture/: data-model.md  overview.md  source-discovery.md
docs/architecture/decisions/: 0001-record-architecture-decisions.md  0002-python-fastapi-backend.md  0003-postgres-and-filesystem-evidence-store.md  0004-monorepo-layout.md  0005-industry-packs-as-versioned-yaml.md  0006-ai-provider-abstraction.md  0007-sqlite-operational-store.md  0008-ai-in-the-loop-default.md  0009-server-rendered-gui.md  0010-contextual-source-coverage.md  0011-collection-robustness.md  0012-geography-regions-as-data.md  0013-configurable-robots-enforcement-and-proxy.md  0014-agentic-source-scout.md  0015-lead-intelligence-before-events.md  0016-deterministic-lead-research-loop.md  README.md
docs/milestones/: M0-foundation.md  M1-industry-packs.md  M2-source-registry.md  M3-crawler.md  M4-entities.md  M5-discovery-profiles.md  M6-projects-graph.md  M8-lead-intelligence.md
docs/spec/: spec-digest.md  spec-index.md
migrations/: env.py
migrations/versions/: 0001_infrastructure_tables.py  0002_pack_registration.py  0003_source_registry.py  0004_source_targeting.py  0005_collection_robustness.py  0006_deprecated_lifecycle.py  0007_crawl_frontier.py  0008_geo_regions.py  0009_scope_exclusions.py  0010_robots_override.py  0011_document_processing.py  0012_entity_core.py  0013_ai_source_scout.py  0014_refine_entity_resolution.py  0015_intelligence_core.py  0016_harden_m5_imports.py  0017_knowledge_graph.py  0018_lead_intelligence.py
tests/: conftest.py  test_api.py  test_autopilot.py  test_backup.py  test_collection_robustness.py  test_company_profiles.py  test_crawler.py  test_discovery_import.py  test_document_processing.py  test_domain_discovery.py  test_entities.py  test_entities_api.py  test_entity_resolution_migration.py  test_evidence_pipeline.py  test_geography.py  test_guidance.py  test_hardening.py  test_health.py  test_industry_packs.py  test_intelligence_facts.py  test_intelligence_profile.py  test_jobs.py  test_knowledge_graph.py  test_lead_intelligence.py  test_m5_api.py  test_m5_m6_hardening.py  test_m5_migration.py  test_m6_api.py  test_m8_api.py  test_matching.py  test_public_profiles.py  test_publication.py  test_references.py  test_regions.py  test_resolution.py  test_settings.py  test_source_registry.py  test_source_scout.py  test_source_targeting.py  test_ui.py  (+1 more)
tests/fixtures/packs/bad_pack/: company_archetypes.yaml  manifest.yaml  mystery_file.yaml
tests/fixtures/packs/coffee_roasting/: company_archetypes.yaml  manifest.yaml  service_taxonomy.yaml
