[project]
name = "heatseeker"
version = "0.1.0"
description = "Heatseeker development workspace (virtual root — not installable)"
requires-python = ">=3.12"
dependencies = [
    "heatseeker-common",
    "heatseeker-core-domain",
    "heatseeker-industry-packs",
    "heatseeker-source-registry",
    "heatseeker-entity-resolution",
    "heatseeker-ai",
    "heatseeker-api",
    "heatseeker-worker",
    "heatseeker-cli",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.uv.workspace]
members = ["packages/*", "applications/*"]

[tool.uv.sources]
heatseeker-common = { workspace = true }
heatseeker-core-domain = { workspace = true }
heatseeker-industry-packs = { workspace = true }
heatseeker-source-registry = { workspace = true }
heatseeker-entity-resolution = { workspace = true }
heatseeker-ai = { workspace = true }
heatseeker-api = { workspace = true }
heatseeker-worker = { workspace = true }
heatseeker-cli = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
