[project]
name = "heatseeker-api"
version = "0.1.0"
description = "Local REST API (binds 127.0.0.1 only — spec §32.1)"
requires-python = ">=3.12"
dependencies = [
    "heatseeker-common",
    "heatseeker-industry-packs",
    "heatseeker-source-registry",
    "heatseeker-core-domain",
    "heatseeker-entity-resolution",
    "heatseeker-ai",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heatseeker_api"]

[tool.uv.sources]
heatseeker-common = { workspace = true }
heatseeker-industry-packs = { workspace = true }
heatseeker-source-registry = { workspace = true }
heatseeker-core-domain = { workspace = true }
heatseeker-entity-resolution = { workspace = true }
heatseeker-ai = { workspace = true }
