[project]
name = "heatseeker-cli"
version = "0.1.0"
description = "Operational CLI: runtime, jobs, packs, sources, coverage, and scopes"
requires-python = ">=3.12"
dependencies = [
    "heatseeker-common",
    "heatseeker-api",
    "heatseeker-worker",
    "heatseeker-industry-packs",
    "heatseeker-source-registry",
    "typer>=0.12",
]

[project.scripts]
heatseeker = "heatseeker_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heatseeker_cli"]

[tool.uv.sources]
heatseeker-common = { workspace = true }
heatseeker-api = { workspace = true }
heatseeker-worker = { workspace = true }
heatseeker-industry-packs = { workspace = true }
heatseeker-source-registry = { workspace = true }
