[project]
name = "heatseeker-worker"
version = "0.1.0"
description = "Job worker: claims and executes queued jobs (spec §30)"
requires-python = ">=3.12"
dependencies = [
    "heatseeker-common",
    "heatseeker-industry-packs",
    "heatseeker-source-registry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/heatseeker_worker"]

[tool.uv.sources]
heatseeker-common = { workspace = true }
heatseeker-industry-packs = { workspace = true }
heatseeker-source-registry = { workspace = true }
